<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <parent>
        <groupId>com.wind.middleware</groupId>
        <artifactId>wind-middleware</artifactId>
        <version>1.0.0-jdk21-SNAPSHOT</version>
        <!-- lookup parent from repository -->
        <relativePath/>
    </parent>

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.wuxp.codegen</groupId>
    <artifactId>wuxp-codegen</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <modules>
        <module>core</module>
        <module>model</module>
        <module>template</module>
        <module>languages</module>
        <module>loong-codegen</module>
        <module>swagger2-codegen</module>
        <module>examples</module>
        <module>swagger3-codegen</module>
        <module>language-annotations</module>
        <module>annotation-meta</module>
        <module>annotation-processor</module>
        <module>loong-codegen-starter</module>
        <module>source-code-support</module>
        <module>loong-maven-plugin</module>
        <module>loong-quick</module>
        <module>code-formatter</module>
    </modules>

    <properties>
        <revision>1.0.0-jdk21-SNAPSHOT</revision>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <jdk.version>${maven.compiler.target}</jdk.version>
        <java.version>${maven.compiler.target}</java.version>
        <project.src.encoding>UTF-8</project.src.encoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <maven.plugin.plugin.version>3.15.1</maven.plugin.plugin.version>

        <swagger2.version>3.0.0</swagger2.version>
        <javaparser.version>3.27.0</javaparser.version>
        <zip4j.version>2.11.5</zip4j.version>
        <google.format.version>1.27.0</google.format.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>net.lingala.zip4j</groupId>
                <artifactId>zip4j</artifactId>
                <version>${zip4j.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.javaparser</groupId>
                <artifactId>javaparser-symbol-solver-core</artifactId>
                <version>${javaparser.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.javaparser</groupId>
                <artifactId>javaparser-core</artifactId>
                <version>${javaparser.version}</version>
            </dependency>
            <dependency>
                <groupId>io.github.classgraph</groupId>
                <artifactId>classgraph</artifactId>
                <version>4.8.112</version>
            </dependency>
            <dependency>
                <groupId>com.google.googlejavaformat</groupId>
                <artifactId>google-java-format</artifactId>
                <version>${google.format.version}</version>
            </dependency>

            <!-- maven plugin 相关-->
            <dependency>
                <groupId>org.apache.maven</groupId>
                <artifactId>maven-core</artifactId>
                <version>3.6.3</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven</groupId>
                <artifactId>maven-plugin-api</artifactId>
                <version>3.6.3</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven</groupId>
                <artifactId>maven-model</artifactId>
                <version>3.6.3</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.plugin-tools</groupId>
                <artifactId>maven-plugin-annotations</artifactId>
                <version>3.6.0</version>
            </dependency>
            <dependency>
                <groupId>org.sonatype.plexus</groupId>
                <artifactId>plexus-build-api</artifactId>
                <version>0.0.7</version>
            </dependency>
            <dependency>
                <groupId>org.codehaus.plexus</groupId>
                <artifactId>plexus-utils</artifactId>
                <version>3.2.1</version>
            </dependency>
            <dependency>
                <groupId>org.apache.maven.shared</groupId>
                <artifactId>maven-artifact-transfer</artifactId>
                <version>0.13.1</version>
            </dependency>

            <!--     provided scope       -->
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-core</artifactId>
                <version>${spring-framework.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-context</artifactId>
                <version>${spring-framework.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-beans</artifactId>
                <version>${spring-framework.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework</groupId>
                <artifactId>spring-web</artifactId>
                <version>${spring-framework.version}</version>
                <scope>provided</scope>
            </dependency>
            <!--  swagger  -->
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger2</artifactId>
                <version>${swagger2.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>io.springfox</groupId>
                <artifactId>springfox-swagger-ui</artifactId>
                <version>${swagger2.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>io.swagger.core.v3</groupId>
                <artifactId>swagger-core-jakarta</artifactId>
                <version>${swagger-openapiv3.version}</version>
            </dependency>
            <!--    子模块        -->
            <dependency>
                <groupId>com.wuxp.codegen</groupId>
                <artifactId>wuxp-codegen-model</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wuxp.codegen</groupId>
                <artifactId>wuxp-codegen-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wuxp.codegen</groupId>
                <artifactId>wuxp-codegen-annotation-meta</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wuxp.codegen</groupId>
                <artifactId>wuxp-codegen-annotation-processor</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wuxp.codegen</groupId>
                <artifactId>wuxp-codegen-source-code-support</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wuxp.codegen</groupId>
                <artifactId>wuxp-codegen-loong-starter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wuxp.codegen</groupId>
                <artifactId>wuxp-codegen-template</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wuxp.codegen</groupId>
                <artifactId>wuxp-codegen-languages</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wuxp.codegen</groupId>
                <artifactId>wuxp-codegen-language-annotations</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wuxp.codegen</groupId>
                <artifactId>wuxp-codegen-code-formatter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wuxp.codegen</groupId>
                <artifactId>wuxp-codegen-swagger2</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wuxp.codegen</groupId>
                <artifactId>wuxp-codegen-swagger3</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.wuxp.codegen</groupId>
                <artifactId>wuxp-codegen-loong</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
        </dependency>
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <organization>
        <name>Wuxp</name>
        <url>https://github.com/fengwuxp</url>
    </organization>

    <developers>
        <developer>
            <id>fengwuxp</id>
        </developer>
    </developers>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-plugin-plugin</artifactId>
                    <version>${maven.plugin.plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <configuration>
                    <delimiters>
                        <delimiter>${*}</delimiter>
                        <delimiter>@{*}</delimiter>
                    </delimiters>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>
                        --add-opens java.base/java.lang=ALL-UNNAMED
                        --add-opens java.base/java.lang.reflect=ALL-UNNAMED
                        --add-opens java.base/java.util=ALL-UNNAMED
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
